--- a/style.css
+++ b/style.css
@@ -16,8 +16,11 @@ html {
 
 body {
     min-height: 100vh;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4rem;
 
     background-color: var(--color-secondary);
 }
