--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ button::after {
     aspect-ratio: 1 / 1;
 
     border-radius: 100%;
-    background: radial-gradient(hsla(0, 0%, 100%, 15%), transparent);
+    background: radial-gradient(hsla(0, 0%, 100%, 10%), transparent);
 }
 
 button:active::after,
@@ -58,7 +58,7 @@ button:active::after,
     top: var(--y);
     left: var(--x);
     z-index: -1;
-    animation: pulse 100ms ease-in-out forwards;
+    animation: pulse 100ms ease-in forwards;
 }
 
 button:active::after {
@@ -66,16 +66,20 @@ button:active::after {
 }
 
 .pulse::after {
-    animation-duration: 375ms;
+    animation-duration: 450ms;
 }
 
 
 @keyframes pulse {
-    from {
+    0% {
         transform: translate(-50%, -50%) scale(0);
     }
 
-    to {
+    75% {
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    100% {
         transform: translate(-50%, -50%) scale(1);
     }
 }
